force-app/main/default/objects/Student__c/fields/Entrance_Score__c.field-meta.xml
<CustomField>
    <fullName>Entrance_Score__c</fullName>
    <description>this field stores student entrance score</description>
    <inlineHelpText>enter student entrance score</inlineHelpText>
    <label>Entrance Score</label>
    <precision>11</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>