force-app/main/default/objects/Student__c/fields/Mother_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_Name__c</fullName>
    <description>this field stores student mother name</description>
    <inlineHelpText>enter student mother name</inlineHelpText>
    <label>Mother Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>