force-app/main/default/objects/Student__c/fields/personal_skills__c.field-meta.xml
<CustomField>
    <fullName>personal_skills__c</fullName>
    <inlineHelpText>enter personal skills</inlineHelpText>
    <label>personal skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adaptability</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Critical thinking</fullName>
            </value>
            <value>
                <fullName>Emotional intelligence</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Problem-solving</fullName>
            </value>
            <value>
                <fullName>Teamwork</fullName>
            </value>
            <value>
                <fullName>Time management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>