force-app/main/default/objects/Student__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>this field stores student phone number</description>
    <inlineHelpText>enter phone number</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>