force-app/main/default/objects/Student__c/fields/Salesforce_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Skill_Set__c</fullName>
    <inlineHelpText>enter tcgnical skills</inlineHelpText>
    <label>Salesforce  technical Skill Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Salesforce_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>APIs</fullName>
            </value>
            <value>
                <fullName>Git</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>SOQL/SOSL</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>Admin Concept</fullName>
            </value>
            <value>
                <fullName>Data Security</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Flows</fullName>
            </value>
            <value>
                <fullName>Triggers</fullName>
            </value>
            <value>
                <fullName>Async Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>