force-app/main/default/objects/Student__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <inlineHelpText>enter student stream of studying</inlineHelpText>
    <label>Stream</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Computer science engineering</fullName>
            </value>
            <value>
                <fullName>CSE(AI &amp; Machine Learning)</fullName>
            </value>
            <value>
                <fullName>Cyber Security,</fullName>
            </value>
            <value>
                <fullName>Data Science,</fullName>
            </value>
            <value>
                <fullName>Electrical Electronics Engineering</fullName>
            </value>
            <value>
                <fullName>Electronics &amp; Communication Engineering</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineering</fullName>
            </value>
            <value>
                <fullName>Robotics,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>