force-app/main/default/objects/Student__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>this field displays the student  id numbers</description>
    <displayFormat>S-{0000}</displayFormat>
    <inlineHelpText>Enter student  ID number</inlineHelpText>
    <label>Student ID</label>
    <type>AutoNumber</type>
</CustomField>