force-app/main/default/objects/Student__c/fields/user_date__c.field-meta.xml
<CustomField>
    <fullName>user_date__c</fullName>
    <label>user date</label>
    <type>Date</type>
</CustomField>