force-app/main/default/objects/Student__c/fields/user_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>user_date_and_time__c</fullName>
    <label>user date and time</label>
    <type>DateTime</type>
</CustomField>